Fixing alignment issue

--- a/src/containers/PostList.css
+++ b/src/containers/PostList.css
@@ -74,10 +74,9 @@
 
 .comment-wrapper {
   list-style: none;
-  width: 100%;
   box-shadow: 0 0 2px gray;
   padding: 5px 5px 3px 5px;
-  margin: 11px 0 5px 0;
+  margin: 5px 0;
 }
 .comment-image {
   margin-right: 10px;
@@ -121,4 +120,8 @@
 
 .full-width {
   width: 100%;
+}
+
+.comment-list {
+  margin-top: 30px;
 }
